--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #test.url=http://localhost:9999/ws/endpoint
 
-#spring.datasource.url=jdbc:h2:mem:test_db
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:test_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
